--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,8 +1,7 @@
 
 
 spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+
 
 
 spring.datasource.url=jdbc:h2:mem:testdb
@@ -10,11 +9,13 @@ spring.datasource.username=sa
 spring.datasource.password=12345
 
 spring.h2.console.enabled=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.h2.console.path=/h2-console
-
+#
 #
 #spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
-#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=
 #spring.jpa.properties.hibernate.hbm2ddl.delimiter=;
