--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,11 @@
     <name>cursomc</name>
     <description>Projeto Hibernate, Rest, Ionic, JWT, S3, mysql</description>
     <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <java.version>11</java.version>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
