--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-spring.profiles.active=prod
+spring.profiles.active=dev
+
+default.sender=murilonerdx527@gmail.com
+default.recipient=murilonerdx527@gmail.com
