--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,26 @@
-spring.profiles.active=dev
+spring.profiles.active=test
 
 default.sender=murilonerdx527@gmail.com
 default.recipient=murilonerdx527@gmail.com
 
 
-spring.mail.host=smtp.gmail.com
-spring.mail.username=
-spring.mail.password=
-spring.mail.properties.mail.smtp.auth = true
-spring.mail.properties.mail.smtp.socketFactory.port = 465
-spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
-spring.mail.properties.mail.smtp.socketFactory.fallback = false
-spring.mail.properties.mail.smtp.starttls.enable = true
-spring.mail.properties.mail.smtp.ssl.enable = true
+#spring.mail.host=smtp.gmail.com
+#spring.mail.username=
+#spring.mail.password=
+#spring.mail.properties.mail.smtp.auth = true
+#spring.mail.properties.mail.smtp.socketFactory.port = 465
+#spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+#spring.mail.properties.mail.smtp.socketFactory.fallback = false
+#spring.mail.properties.mail.smtp.starttls.enable = true
+#spring.mail.properties.mail.smtp.ssl.enable = true
 
-jwt.secret=JavaEMuitoBom
-jwt.expiration=360000
+jwt.secret=SequenciaDeCaracteresParaAssinarToken
+jwt.expiration=86400000
+
+
+
+img.prefix.client.profile=cp
+img.profile.size=200
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
